[tool.poetry]
name = "progressbar"
version = "1.0.0"
description = "Command-line progress bar for streaming files"
authors = ["Geoffrey Lentner <glentner@purdue.edu>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/glentner/progressbar"
documentation = "https://github.com/glentner/progressbar"
repository = "https://github.com/glentner/progressbar"
keywords = ["command-line", "utility"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
]
packages = [{include = "progressbar", from = "src"}]

[tool.poetry.scripts]
pb = "progressbar:main"

[tool.poetry.dependencies]
python = "^3.12"
cmdkit = "2.7.3"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"
pyright = "^1.1.348"
pynvim = "^0.5.0"
pytest = "^7.4.4"
ipython = "^8.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
