[project]
name = "progressbar"
version = "1.2.1"
description = "Command-line progress bar for streaming files"
authors = [
    { name = "Geoffrey Lentner", email = "glentner@purdue.edu" }
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/glentner/progressbar"
documentation = "https://github.com/glentner/progressbar"
repository = "https://github.com/glentner/progressbar"
keywords = [
    "command-line",
    "utility"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.12"
dependencies = [
    "cmdkit>=2.7.7",
    "tqdm>=4.66.1",
]

[project.scripts]
pb = "progressbar:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
